Updating css for icons.

--- a/css/icons.css
+++ b/css/icons.css
@@ -368,6 +368,7 @@
 .icon-dripping-knife { background-image: url(../img/dripping-knife.png);}
 .icon-dripping-stone { background-image: url(../img/dripping-stone.png);}
 .icon-dripping-sword { background-image: url(../img/dripping-sword.png);}
+.icon-drop-weapon { background-image: url(../img/drop-weapon.png);}
 .icon-drop { background-image: url(../img/drop.png);}
 .icon-droplet-splash { background-image: url(../img/droplet-splash.png);}
 .icon-droplets { background-image: url(../img/droplets.png);}
@@ -529,6 +530,7 @@
 .icon-gooey-sword { background-image: url(../img/gooey-sword.png);}
 .icon-grab { background-image: url(../img/grab.png);}
 .icon-grapes { background-image: url(../img/grapes.png);}
+.icon-grapple { background-image: url(../img/grapple.png);}
 .icon-grasping-claws { background-image: url(../img/grasping-claws.png);}
 .icon-grass { background-image: url(../img/grass.png);}
 .icon-grease-trap { background-image: url(../img/grease-trap.png);}
